--- a/Footsteps/.classpath
+++ b/Footsteps/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="lib" path="C:/Users/Maxim/workspace/APIs/LWJGL/lwjgl-2.8.5/jar/lwjgl.jar" sourcepath="C:/Users/Maxim/workspace/APIs/LWJGL/src/src/java"/>
 	<classpathentry kind="lib" path="C:/Users/Maxim/workspace/APIs/LWJGL/lwjgl-2.8.5/jar/lwjgl_util.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Maxim/workspace/APIs/slick.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Maxim/workspace/APIs/LWJGL/lwjgl-2.8.5/jar/jinput.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
