--- a/Footsteps/.classpath
+++ b/Footsteps/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="lib" path="C:/Users/Maxim/workspace/APIs/LWJGL/lwjgl-2.8.5/jar/lwjgl_util.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Maxim/workspace/APIs/slick.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Maxim/workspace/APIs/LWJGL/lwjgl-2.8.5/jar/jinput.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Maxim/workspace/APIs/OBJImport.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
